# Q1_25_Builder_eshan-sharma

./: .gitmodules  README.md
amm/: Anchor.toml
capstone_project/: grid_emission_factor.json
capstone_project/regen-credit/: Anchor.toml  package.json
capstone_project/regen-credit/programs/regen-credit/: Cargo.toml
capstone_project/regen-credit/programs/regen-credit/src/: errors.rs  lib.rs
capstone_project/regen-credit/programs/regen-credit/src/context/: delist.rs  init.rs  init_carbon_credit.rs  init_marketplace.rs  list.rs  mint_nft.rs  mod.rs  purchase.rs  reduce_carbon_credit.rs  send_usdc.rs  update_marketplace_fee.rs
capstone_project/regen-credit/programs/regen-credit/src/helper/: mod.rs
capstone_project/regen-credit/programs/regen-credit/src/state/: carbon_credit.rs  listing.rs  marketplace.rs  mod.rs
dice/: Anchor.toml
escrow/: Anchor.toml
escrow/tests/: escrow.ts
marketplace/: Anchor.toml
marketplace/tests/: marketplace.ts
nft/: nft_image.ts  nft_metadata.ts  nft_mint.ts  package.json
self-study/: README.md
self-study/crud-app/: README.md  package-lock.json
self-study/hello-world/: Anchor.toml
self-study/new-nft/: create-collection.ts  create-nft.ts  package-lock.json  package.json  verify-nft.ts
self-study/new-token/: README.md
self-study/onchain-voting/: Anchor.toml
self-study/swap/: Anchor.toml
self-study/token-vesting/: package-lock.json
self-study/voting-dapp/: README.md  (+1 more)
spl-token/: package.json  spl_init.ts  spl_metadata.ts  spl_mint.ts  spl_transfer.ts
staking/: Anchor.toml
vault/: Anchor.toml  package.json
(+69 files in other folders)
