[package]
name = "regen-credit"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "regen_credit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1",features = ["init-if-needed"]}
anchor-spl = "0.30.1"
pyth-solana-receiver-sdk ="0.5.0" 
mpl-core = { version = "0.9.0", features = ["anchor"] }